CRUD functionality ready

--- a/app/pages/contact-info/contact-info.html
+++ b/app/pages/contact-info/contact-info.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="getting-started">
+<ion-content padding>
     <ion-list inset>
         <form [ngFormModel]="form" (ngSubmit)="save()">
             <ion-item>
