--- a/app/pages/group/group.html
+++ b/app/pages/group/group.html
@@ -1,55 +1,3 @@
-<!-- <div class="panel panel-default">
-  <div class="panel-heading text-center">
-    <h3 *ngIf="!group.id">New group</h3>
-    <h3 *ngIf="group.id">{{ group.name }} </h3>
-  </div>
-  <div class="panel-body">
-    <form class="form-horizontal" [ngFormModel]="form" (ngSubmit)="save()">
-      <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Name</label>
-        <div class="col-sm-10">
-          <input class="form-control" ngControl="name" [(ngModel)]="group.name">
-        </div>
-      </div>
-
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-danger" (click)="back()">Back</button>
-      </div>
-
-    </form>
-  </div>
-</div>
-
-
-<div class="panel panel-default" *ngIf="group.id">
-  <div class="panel-heading text-center">
-    <h3>Contacts</h3>
-  </div>
-  <div class="panel-body">
-    <table class="table"><tr>
-        <td>
-          <select class="form-control" [(ngModel)]="selectedContactId" placeholder="Select contact">
-            <option *ngFor="#contact of remainingContacts" [value]="contact.id">
-              {{ contact.firstName + ' ' + contact.lastName }}
-            </option>
-          </select>
-        </td>
-        <td>
-          <button type="button" class="fa fa-plus btn btn-primary pull-right" (click)="addSelectedContact()" (disabled)="!selectedContactId">
-          </button>
-        </td>
-      </tr>
-      <tr *ngFor="#contactGroup of contactGroups">
-        <td>{{ contactGroup.contact.firstName + ' ' + contactGroup.contact.lastName }}</td>
-        <td>
-          <button type="button" class="fa fa-trash btn btn-danger pull-right" (click)="removeContact(contactGroup.id)">
-          </button>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div> -->
 
 <ion-header>
   <ion-navbar>
@@ -68,14 +16,16 @@
         <ion-label floating>Name</ion-label>
         <ion-input type="text" [(ngModel)]="group.name"></ion-input>
       </ion-item>
-      <button block>
+      <button block class="col50 col-offset-25">
         <ion-icon name="add"></ion-icon>Save
+      </button>
+      <button block class="col50 col-offset-25">
         <ion-icon name="back" (ngClick)="back()"></ion-icon>Back
       </button>
     </form>
   </ion-list>
   <ion-list inset>
-    <form [ngFormModel]="form" (ngSubmit)="save()">
+    <form [ngFormModel]="form" (ngSubmit)="addSelectedContact()">
       <ion-item>
         <ion-label floating>Name</ion-label>
         <ion-select [(ngModel)]="selectedContactId">
@@ -84,8 +34,8 @@
           </ion-option>
         </ion-select>
       </ion-item>
-      <button block>
-        <ion-icon name="add" (click)="addSelectedContact()" (disabled)="!selectedContactId"></ion-icon>Add
+      <button block class="col50 col-offset-25">
+        <ion-icon name="add" (click)="addSelectedContact(selectedContactId)" (disabled)="!selectedContactId"></ion-icon>Add
       </button>
     </form>
   </ion-list>
