--- a/app/pages/contact-info/contact-info.html
+++ b/app/pages/contact-info/contact-info.html
@@ -43,13 +43,18 @@
             <ion-item>
                 <ion-label floating>Country</ion-label>
                 <ion-input ngControl="country" [(ngModel)]="contactInfo.country"></ion-input>
+            </ion-item>            
+            <ion-item center>
+                <button class="button button-small button-light" *ngIf="!contactInfo.id" (click)="save(contactInfo.contactId)">
+                    <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>Add
+                </button>
+                <button class="button button-small button-light" *ngIf="contactInfo.id" (click)="save()">
+                    <ion-icon ios="ios-create" md="md-create"></ion-icon>Save
+                </button>
+                <button class="button button-small button-light" (click)="back()">
+                    <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>Back
+                </button>
             </ion-item>
-            <button block>
-                <button (click)="add($event)">Add</button>
-                <button (click)="save()">Save</button>
-                <button (click)="back()">Back</button>
-            </button>
         </form>
     </ion-list>
-    
 </ion-content>
