--- a/app/pages/contact-list/contact-list.html
+++ b/app/pages/contact-list/contact-list.html
@@ -4,13 +4,27 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Contact List</ion-title>
+        <ion-buttons end>
+            <button name="add" class="button button-small button-light" (click)="createContact()">
+                <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
-<ion-content>
-    <ion-list>
-        <button ion-item *ngFor="let contact of contacts" (click)="show($event, contact.id)">
-            <ion-icon name="{{contact.imageUrl || shadowImage}}" item-left></ion-icon>
-            {{ contact.firstName + ' ' + contact.lastName }}
-        </button>
-    </ion-list>
+<ion-content padding>
+    <ion-grid>
+        <ion-row *ngFor="let contact of contacts">
+            <ion-col width-90>
+                <button ion-item (click)="show($event, contact.id)">
+                    <ion-icon name="{{contact.imageUrl || shadowImage}}" item-left></ion-icon>
+                    {{ contact.firstName + ' ' + contact.lastName }}
+                </button>
+            </ion-col>
+            <ion-col right>
+                <button name="trash" class="button button-small button-light" (click)="remove(contact.id)">
+                    <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
+                </button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
