--- a/app/pages/contact/contact.html
+++ b/app/pages/contact/contact.html
@@ -1,63 +1,55 @@
 <ion-header>
     <ion-navbar>
-        <button menuToggle>
+        <button menuToggle *ngIf="!selectedItem">
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title *ngIf="!contact.id">Detail - New contact</ion-title>
-        <ion-title *ngIf="contact.id">Detail - {{ contact.firstName }} {{ contact.lastName }}</ion-title>
+        <ion-title>Contact Info</ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
-    <ion-grid>
+    <ion-list inset>
+        <form [ngFormModel]="contactForm">
+            <ion-item>
+                <ion-label floating>First name</ion-label>
+                <ion-input type="text" ngControl="firstName" [(ngModel)]="contact.firstName"></ion-input>
+                <div *ngIf="firstName.hasError('required') " class="error-box">* First name is required</div>
+            </ion-item>
+            <ion-item>
+                <ion-label floating>Last name</ion-label>
+                <ion-input type="text" ngControl="lastName" [(ngModel)]="contact.lastName"></ion-input>
+                <div *ngIf="lastName.hasError('required') && lastName.touched" class="error-box">* Last name is required</div>
+            </ion-item>
+            <ion-item>
+                <ion-label floating>Image URL</ion-label>
+                <ion-input type="text" ngControl="imageUrl" [(ngModel)]="contact.imageUrl"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label floating>Skype</ion-label>
+                <ion-input type="text" ngControl="skype" [(ngModel)]="contact.skype"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label floating>Twitter</ion-label>
+                <ion-input ngControl="twitter" [(ngModel)]="contact.twitter"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label floating>Notes</ion-label>
+                <ion-input type="text" ngControl="notes" [(ngModel)]="contact.notes"></ion-input>
+            </ion-item>
+            <ion-item center>
+                <button class="button button-small button-light" (click)="save()">
+                    <ion-icon ios="ios-create" md="md-create"></ion-icon>Save</button>
+                <button class="button button-small button-light" (click)="back()">
+                    <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>Back
+                </button>
+            </ion-item>
+        </form>
+    </ion-list>
+    <!-- Table -->
+    <ion-grid *ngIf="contact.id">
+        <ion-row center>
+            <ion-title>Groups</ion-title>
+        </ion-row>
         <ion-row>
-            <ion-col>
-                <form [ngFormModel]="contactForm">
-                    <ion-item>
-                        <ion-label floating>First name</ion-label>
-                        <ion-input type="text" ngControl="firstName" [(ngModel)]="contact.firstName"></ion-input>
-                        <div *ngIf="firstName.hasError('required') " class="error-box">* First name is required</div>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating>Last name</ion-label>
-                        <ion-input type="text" ngControl="lastName" [(ngModel)]="contact.lastName"></ion-input>
-                        <div *ngIf="lastName.hasError('required') && lastName.touched" class="error-box">* Last name is required</div>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating>Image URL</ion-label>
-                        <ion-input type="text" ngControl="imageUrl" [(ngModel)]="contact.imageUrl"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating>Skype</ion-label>
-                        <ion-input type="text" ngControl="skype" [(ngModel)]="contact.skype"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating>Twitter</ion-label>
-                        <ion-input ngControl="twitter" [(ngModel)]="contact.twitter"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label floating>Notes</ion-label>
-                        <ion-input type="text" ngControl="notes" [(ngModel)]="contact.notes"></ion-input>
-                    </ion-item>
-                    <ion-nav-bar class="bar-dark">
-                        <ion-nav-buttons side="secondary">
-                            <button (click)="save()" side="left">
-                                <ion-icon ios="ios-create" md="md-create"></ion-icon>Save
-                            </button>
-                            <button (click)="back()" side="right">
-                                <ion-icon ios="ios-arrow-back" md="md-arrow-back" name="back"></ion-icon>Back
-                            </button>
-                            <button name="add" (click)="createContact($event)">
-                                <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>Add
-                            </button>
-                        </ion-nav-buttons>
-                    </ion-nav-bar>
-                </form>
-            </ion-col>
-        </ion-row>
-        <ion-row *ngIf="contact.id" center>
-            <ion-label>Groups</ion-label>
-        </ion-row>
-        <ion-row *ngIf="contact.id">
             <ion-col>
                 <ion-item>
                     <ion-select [(ngModel)]="selectedGroupId" placeholder="Select group">
@@ -79,12 +71,8 @@
                 </button>
             </ion-col>
         </ion-row>
-        <ion-row>
-            <ion-col>
-                <ion-list inset *ngIf="contact.id">
-                    <contact-info-list></contact-info-list>
-                </ion-list>
-            </ion-col>
-        </ion-row>
     </ion-grid>
+    <ion-list inset *ngIf="contact.id">
+        <contact-info-list></contact-info-list>
+    </ion-list>
 </ion-content>
