--- a/app/pages/group/group.html
+++ b/app/pages/group/group.html
@@ -14,17 +14,17 @@
                 <ion-label floating>Name</ion-label>
                 <ion-input type="text" [(ngModel)]="group.name"></ion-input>
             </ion-item>
-            <ion-item>
-                <button class="button button-small button-light" (click)="save()">
+             <div class="button-bar">
+                <button class="button icon-left button-positive" (click)="save(group.id)">
                     <ion-icon ios="ios-create" md="md-create"></ion-icon>Save
                 </button>
-                <button class="button button-small button-light" (click)="back()">
+                <button class="button icon-left button-positive" (click)="back()">
                     <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>Back
                 </button>
-            </ion-item>
+            </div>
         </form>
     </ion-list>
-    <ion-list inset>
+    <ion-list inset *ngIf="group.id">
         <form [ngFormModel]="form">
             <ion-item>
                 <ion-label floating>Name</ion-label>
@@ -34,11 +34,11 @@
                     </ion-option>
                 </ion-select>
             </ion-item>
-            <ion-item>
-                <button class="button button-small button-light" (click)="addSelectedContact(selectedContactId)" (disabled)="!selectedContactId">
+           <div class="button-bar">
+                <button class="button icon-left button-positive" (click)="addSelectedContact(selectedContactId)" (disabled)="!selectedContactId">
                     <ion-icon name="add" ios="ios-add-circle" md="md-add-circle"></ion-icon>Add
                 </button>
-            </ion-item>
+           </div>
         </form>
     </ion-list>
     <ion-list>
@@ -46,7 +46,7 @@
             <tr *ngFor="let contactGroup of contactGroups">
                 <td style="width: 90%;">{{ contactGroup.contact.firstName }}</td>
                 <td>
-                    <button type="button" class="button button-small button-light" (click)="removeContact(contactGroup.id)">
+                    <button type="button" class="button icon-left button-positive" (click)="removeContact(contactGroup.id)">
                         <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
                     </button>
                 </td>
