--- a/app/pages/contact-list/contact-list.html
+++ b/app/pages/contact-list/contact-list.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <button menuToggle>
+        <button menuToggle [hidden]="menuIsHidden" style="display:flex !important">
             <ion-icon name="menu"></ion-icon>
         </button>
         <div class="button-bar" style="display:flex;padding-right:6%;float: right;padding: 0;">
