--- a/app/pages/register/register.html
+++ b/app/pages/register/register.html
@@ -21,7 +21,7 @@
                 <ion-input type="password" ngControl="password"></ion-input>
             </ion-item>
             <div class="button-bar">
-                <button class="button icon-left button-positive" (click)="register()">
+                <button class="button icon-left button-positive" [disabled]="!form.valid" (click)="register()">
                     <ion-icon ios="ios-log-in" md="md-log-in"></ion-icon>Register
                 </button>
                 <button class="button icon-left button-positive" (click)="back()">
