--- a/app/pages/contact/contact.html
+++ b/app/pages/contact/contact.html
@@ -52,7 +52,7 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col>
+            <ion-col  width-90>
                 <ion-item>
                     <ion-select [(ngModel)]="selectedGroupId" placeholder="Select group">
                         <ion-option *ngFor="let group of remainingGroups" [value]="group.id">{{ group.name }}</ion-option>
