--- a/app/pages/group/group-list.html
+++ b/app/pages/group/group-list.html
@@ -17,7 +17,7 @@
             <ion-col width-90>
                 <button ion-item (click)="show(group.id)">
                     <ion-icon item-left></ion-icon>
-                    {{ group.id + ' - ' + group.name }}
+                    {{ group.name }}
                 </button>
             </ion-col>
             <ion-col right>
