--- a/app/pages/group/group.html
+++ b/app/pages/group/group.html
@@ -47,7 +47,7 @@
                 <td style="width: 90%;">
                     <button ion-item (click)="show($event, contactGroup.contact.id)">
                     <ion-icon name="{{contactGroup.contact.imageUrl}}"></ion-icon>
-                    {{ contactGroup.contact.firstName }}
+                    {{ contactGroup.contact.lastName }}
                 </button>
                 </td>
                 <td>
