--- a/app/pages/group/group-list.html
+++ b/app/pages/group/group-list.html
@@ -5,10 +5,10 @@
         </button>
         <div class="button-bar" style="display:flex;padding-right:6%;float: right;padding: 0;">
             <ion-title>Groups</ion-title>
-            <button name="add" (click)="createGroup()" clear end>
+            <button name="add" (click)="createGroup()">
                 <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
             </button>
-            <button name="log-out" class="button icon-left button-positive" (click)="logout()">
+            <button name="log-out" (click)="logout()">
                 <ion-icon ios="ios-log-out" md="md-log-out"></ion-icon>
             </button>
         </div>
